--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
 	<title></title>
 </head>
 <body>
-	<h1>いいいいい</h1>
-	<p>こんにちわテスト</p>
-
-	<p>テスト1</p>
-	<p>おおお</p>
-	<p>れいわ</p>
-	<p>れいわ</p>
+	<h1>タスクA</h1>
 </body>
 </html>
